# jenia-example

./: .pre-commit-config.yaml  pyproject.toml
example/: __init__.py  program.py
example/tests/: test_uni.py
